--- a/movies/Front/director/delete.html
+++ b/movies/Front/director/delete.html
@@ -21,20 +21,17 @@
         <input type="number" id="id" placeholder="Director id" maxlength="4"></br>
         <div id="id_error" class="margin_bottom"></div>
         </br>
-        <div id="hide">
-            <button name="submit" id="submit" value="delete" class="btn-primary btn margin_bottom">Delete Lead</button>
-            <div>
-                </br>
-                <div id="result" class="container">
-                    </table>
-                </div>
+        <div id="hide" class="hide">
+            <button id="submit" value="delete" class="btn-primary btn margin_bottom">Delete Lead</button>
+            </br>
+            <span id="result"></span>
 
+        </div>
 
-                <script src='director.js'></script>
-                <script src="../scripts/script.js"></script>
-                <script src="../scripts/Validation-CS.js"></script>
-                <script src="../scripts/ajax.js"></script>
-
+        <script src='director.js'></script>
+        <!-- <script src="../scripts/Validation-CS.js"></script> -->
+        <script src="../scripts/ajax.js"></script>
+        <script src="../scripts/mainScript.js"></script>
 
 
 </body>
