--- a/movies/Front/director/update.html
+++ b/movies/Front/director/update.html
@@ -20,24 +20,23 @@
         <input type="number" id="id" placeholder="leads id" maxlength="4"></br>
         <div id="id_error"></div>
         </br>
-        <!-- <div class="hide" id="hide"> -->
-        <h4> Update values:</h4>
+        <div class="hide" id="hide">
+            <h4> Update values:</h4>
 
-        <label for="name">Name:</label> </br>
-        <input type="text" id="name" placeholder="Director name" class="margin_bottom"> </br>
-        </br>
-        <button name="submit" value="update" class="btn btn-primary margin_bottom">Update Director</button>
-        </br>
-        <div id="result" class="container margin_bottom"></div>
-        <!-- </div> -->
+            <label for="name">Name:</label> </br>
+            <input type="text" id="name" placeholder="Director name" class="margin_bottom"> </br>
+            </br>
+            <button id="submit" value="update" class="btn btn-primary margin_bottom">Update Director</button>
+            </br>
+            <div id="result" class="margin_bottom"></div>
+        </div>
 
     </div>
 
     <script src='director.js'></script>
-    <script src="../scripts/script.js"></script>
-    <script src="../scripts/Validation-CS.js"></script>
+    <!-- <script src="../scripts/Validation-CS.js"></script> -->
     <script src="../scripts/ajax.js"></script>
-
+    <script src="../scripts/mainScript.js"></script>
 
 </body>
 
