--- a/movies/Front/director/select.html
+++ b/movies/Front/director/select.html
@@ -24,7 +24,7 @@
 
 
     <script src='director.js'></script>
-    <!-- <script src="../scripts/Validation-CS.js"></script> -->
+    <script src="../scripts/Validation-CS.js"></script>
     <script src="../scripts/ajax.js"></script>
     <script src="../scripts/mainScript.js"></script>
 
