--- a/movies/Front/director/index.html
+++ b/movies/Front/director/index.html
@@ -14,11 +14,11 @@
 <body>
     <div class="myform">
         <h3 class="header"> DIRECTORS </h3>
-        <a href="select.html"><button class="btn btn-lg btn-primary margin_bottom" type="select">Select all leads <span class="glyphicon glyphicon-th-list"></button></a>
-        <a href="update.html"><button class="btn btn-lg btn-primary margin_bottom" type="update">Update leads <span class="glyphicon glyphicon-refresh"></button></a>
+        <a href="select.html"><button class="btn btn-lg btn-primary margin_bottom" type="select">Select all leads <span class="glyphicon glyphicon-th-list"></span></button></a>
+        <a href="update.html"><button class="btn btn-lg btn-primary margin_bottom" type="update">Update leads <span class="glyphicon glyphicon-refresh"></span></button></a>
         </br>
-        <a href="delete.html"><button class="btn btn-lg btn-primary" type="select">Delete 1 lead <span class="glyphicon glyphicon-trash"></button></a>
-        <a href="create.html"><button class="btn btn-lg btn-primary" type="select">Create a new lead  <span class="glyphicon glyphicon-plus"></button></a>
+        <a href="delete.html"><button class="btn btn-lg btn-primary margin_bottom" type="select">Delete 1 lead <span class="glyphicon glyphicon-trash"></span></button></a>
+        <a href="create.html"><button class="btn btn-lg btn-primary margin_bottom" type="select">Create a new lead  <span class="glyphicon glyphicon-plus"></span></button></a>
     </div>
 
 
