--- a/movies/Front/movie/create.html
+++ b/movies/Front/movie/create.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Create Leads</title>
+    <title>Create Movies</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="style_d.css">
+    <link rel="stylesheet" href="style_m.css">
 
 
 </head>
@@ -14,19 +14,20 @@
 <body>
 
     <div class="myform container">
-        <h2> Create director </h2>
+        <h2> Create Movies </h2>
         </br>
         <label for="name">Name:</label> </br>
-        <input type="text" id="name" placeholder="Director name" class="margin_bottom"> </br>
-        <!-- <label for="select_id">select a product:</label> </br>
+        <input type="text" id="name" placeholder="Movie name" class="margin_bottom"> </br>
+        <label for="select_id">select a director id:</label> </br>
         <select id="select_id" class="margin_bottom"></select>
-        </br> -->
-        <button id="submit" value="create" class="btn btn-primary margin_bottom">Create Director</button>
+        </br>
+        <button id="submit" value="create" class="btn btn-primary margin_bottom">Create Movie</button>
         </br>
         <table id="result" class="container margin_bottom"></table>
     </div>
 
-    <script src='director.js'></script>
+    <script src='movies.js'></script>
+    <script src='select_list.js'></script>
     <script src="../scripts/Validation-CS.js"></script>
     <script src="../scripts/ajax.js"></script>
     <script src="../scripts/mainScript.js"></script>
