--- a/movies/Front/movie/delete.html
+++ b/movies/Front/movie/delete.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Delete Director</title>
+    <title>Delete Movies</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/style.css">
@@ -14,21 +14,21 @@
 <body>
 
     <div class="myform container">
-        <h2> Delete a director </h2>
+        <h2> Delete a Movies </h2>
         </br>
 
-        <label for="id" class="margin_bottom">Director Id:</label> </br>
-        <input type="number" id="id" placeholder="Director id" maxlength="4"></br>
+        <label for="id" class="margin_bottom">Movies Id:</label> </br>
+        <input type="number" id="id" placeholder="Movies id" maxlength="4"></br>
         <div id="id_error" class="margin_bottom"></div>
         </br>
         <div id="hide" class="hide">
-            <button id="submit" value="delete" class="btn-primary btn margin_bottom">Delete Lead</button>
+            <button id="submit" value="delete" class="btn-primary btn margin_bottom">Delete Movies</button>
             </br>
             <span id="result"></span>
 
         </div>
 
-        <script src='director.js'></script>
+        <script src='movies.js'></script>
         <script src="../scripts/Validation-CS.js"></script>
         <script src="../scripts/ajax.js"></script>
         <script src="../scripts/mainScript.js"></script>
