--- a/movies/Front/movie/update.html
+++ b/movies/Front/movie/update.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>Create Leads</title>
+    <title>Update Movies</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="style_d.css">
+    <link rel="stylesheet" href="style_m.css">
 
 
 </head>
@@ -14,26 +14,29 @@
 <body>
 
     <div class="myform container">
-        <h2> Update director </h2>
+        <h2> Update movies </h2>
         </br>
-        <label for="id">Director Id:</label> </br>
-        <input type="number" id="id" placeholder="leads id" maxlength="4"></br>
+        <label for="id">Movies Id:</label> </br>
+        <input type="number" id="id" placeholder="Movie id" maxlength="4"></br>
         <div id="id_error"></div>
         </br>
         <div class="hide" id="hide">
             <h4> Update values:</h4>
 
             <label for="name">Name:</label> </br>
-            <input type="text" id="name" placeholder="Director name" class="margin_bottom"> </br>
+            <input type="text" id="name" placeholder="Movie name" class="margin_bottom"> </br>
             </br>
-            <button id="submit" value="update" class="btn btn-primary margin_bottom">Update Director</button>
+            <label for="select_id">select a director id:</label> </br>
+            <select id="select_id" class="margin_bottom"></select>
+            </br>
+            <button id="submit" value="update" class="btn btn-primary margin_bottom">Update Movies</button>
             </br>
             <div id="result" class="margin_bottom"></div>
         </div>
 
     </div>
-
-    <script src='director.js'></script>
+    <script src='select_list.js'></script>
+    <script src='movies.js'></script>
     <script src="../scripts/Validation-CS.js"></script>
     <script src="../scripts/ajax.js"></script>
     <script src="../scripts/mainScript.js"></script>
