--- a/movies/Front/director/select.html
+++ b/movies/Front/director/select.html
@@ -27,6 +27,7 @@
     <script src="../scripts/Validation-CS.js"></script>
     <script src="../scripts/ajax.js"></script>
     <script src="../scripts/mainScript.js"></script>
+    <script src="../scripts/TableFunc.js"></script>
 
 
 
