--- a/movies/Front/movie/delete.html
+++ b/movies/Front/movie/delete.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="he">
 
 <head>
+    <meta charset="utf-8" />
     <title>Delete Movies</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="style_d.css">
+    <link rel="stylesheet" href="style_m.css">
 
 
 </head>
