--- a/movies/Front/movie/select.html
+++ b/movies/Front/movie/select.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="style_d.css">
+    <link rel="stylesheet" href="style_m.css">
 
 
 </head>
@@ -27,6 +27,7 @@
     <script src="../scripts/Validation-CS.js"></script>
     <script src="../scripts/ajax.js"></script>
     <script src="../scripts/mainScript.js"></script>
+    <script src="../scripts/TableFunc.js"></script>
 
 
 </body>
