--- a/movies/Front/movie/update.html
+++ b/movies/Front/movie/update.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="he">
 
 <head>
+    <meta charset="utf-8" />
     <title>Update Movies</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
