--- a/movies/Front/movie/create.html
+++ b/movies/Front/movie/create.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="style_m.css">
+    <link rel="stylesheet" href="../styles/movies/style_m.css">
 
 
 </head>
@@ -27,11 +27,16 @@
         <table id="result" class="container margin_bottom"></table>
     </div>
 
-    <script src='movies.js'></script>
-    <script src='select_list.js'></script>
+
+
+
+    <script src='../scripts/movies/movies_main.js'></script>
+    <script src='../scripts/movies/movieModel.js'></script>
+    <script src='../scripts/movies/movie_controller.js'></script>
+    <script src='../scripts/movies/select_list.js'></script>
     <script src="../scripts/Validation-CS.js"></script>
     <script src="../scripts/ajax.js"></script>
-    <script src="../scripts/mainScript.js"></script>
+    <script src="../scripts/callback.js"></script>
 
 
 
