--- a/movies/Front/director/update.html
+++ b/movies/Front/director/update.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="style_d.css">
+    <link rel="stylesheet" href="../styles/director/style_d.css">
 
 
 </head>
@@ -34,10 +34,12 @@
 
     </div>
 
-    <script src='director.js'></script>
+    <script src='../scripts/directors/director_main.js'></script>
+    <script src='../scripts/directors/director_model_controller.js'></script>
+    <script src='../scripts/directors/directorModel.js'></script>
     <script src="../scripts/Validation-CS.js"></script>
     <script src="../scripts/ajax.js"></script>
-    <script src="../scripts/mainScript.js"></script>
+    <script src="../scripts/callback.js"></script>
 
 </body>
 
