--- a/movies/index.html
+++ b/movies/index.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="Front/styles/style.css">
-    <link rel="stylesheet" href="Front/movie/style_m.css">
+    <link rel="stylesheet" href="Front/styles/movies/style_m.css">
 
 
 </head>
